@@ -23,6 +23,7 @@ These extensions are built in and can be activated by respective entries in the
    autosummary
    coverage
    doctest
+   duration
    extlinks
    githubpages
    graphviz
